--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="modal_style.css">
 </head>
 <body>
     <div class="sidebar">
@@ -15,10 +16,39 @@
                 <li><a href="#totalBudget">Total Budget</a></li>
                 <li><a href="#transactionHistory">Transaction History</a></li>
                 <li><a href="#filters">Filters</a></li>
+                <li><a href="javascript:void(0);" onclick="openModal('signUpModal')">Sign Up</a></li>
+                <li><a href="javascript:void(0);" onclick="openModal('signInModal')">Sign In</a></li>
+                <li><a href="javascript:void(0);" onclick="signOutUser()">Sign Out</a></li>
             </ul>
         </nav>
     </div>
 
+    <div id="signUpModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('signUpModal')">&times;</span>
+            <h2>Sign Up</h2>
+            <form id="signUpForm">
+                <input type="text" id="signUpUsername" placeholder="Username" required>
+                <input type="email" id="signUpEmail" placeholder="Email" required>
+                <input type="password" id="signUpPassword" placeholder="Password" required>
+                <button type="submit">Sign Up</button>
+            </form>
+        </div>
+    </div>
+
+    <div id="signInModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('signInModal')">&times;</span>
+            <h2>Sign In</h2>
+            <form id="signInForm">
+                <input type="text" id="signInemail" placeholder="email" required>
+                <input type="password" id="signInPassword" placeholder="Password" required>
+                <button type="submit">Sign In</button>
+            </form>
+        </div>
+    </div>
+
+    
     <div class="container">
         <h1>Expense Tracker</h1>
 
@@ -61,5 +91,6 @@
     </div>
     
     <script src="script.js"></script>
+    <script src="open_close_modals.js"></script>
 </body>
 </html>
